--- a/style.css
+++ b/style.css
@@ -50,11 +50,23 @@ body a {
   text-shadow: 0 0 8px rgba(0,0,0,0.65);
 }
 
-.item-img {
+body .item-img {
   transition: 0.3s ease;
 }
 
 .item-img:hover {
-  filter: blur(2.5px);
+  filter: blur(2px);
 }
+
+
+.car-game-img {
+  width: 100%;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.car-game-img:hover {
+  filter: blur(2px);
+}
+
 
