item page updates

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
     }
 
     .cart-icon {
-  cursor: pointer;
+      cursor: pointer;
 }
 
 .cart-icon .badge {
@@ -128,4 +128,13 @@
   align-items: center;
   justify-content: center;
   padding: 0;
+}
+
+#searchBtn {
+  border-radius: 0px 10px 10px 0px;
+  margin-left: -5px
+}
+
+.searchBar .form-control {
+  border-radius: 10px 0px 0px 10px;
 }
